# TestFlaskAPI-ExternalMarketInformation

./: .env  .gitignore  app.py  copy_data_to_lake.py  get_articles_eventRegistry.py  get_stock_prices.py  get_stock_symbols.py  pyproject.toml  requirements.txt
